# boot-dev

./: README.md
functional-programming/pure-functions/: lesson01.py  lesson01_test.py  lesson02.py  lesson02_test.py  lesson03.py  lesson03_test.py  pyproject.toml
functional-programming/recursion/: l1.py  l12.py  l12_test.py  l14.py  l14_test.py  l1_test.py  l4.py  l4_test.py  l8.py  l8_test.py  pyproject.toml
